<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <Button
        android:id="@+id/scale"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/menu_scale" />

    <Button
        android:id="@+id/rotate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/menu_rotate" />

    <Button
        android:id="@+id/sliding"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/menu_sliding" />

    <LinearLayout
        android:id="@+id/sliding_control"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="20dp"
        android:visibility="gone" >

        <Button
            android:id="@+id/sliding_start"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/menu_sliding_start" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="65dp"
                android:layout_height="wrap_content"
                android:text="@string/interval" />

            <com.hisilicon.higallery.ui.HorizontalArrayPicker
                android:id="@+id/sliding_interval_picker"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="65dp"
                android:layout_height="wrap_content"
                android:text="@string/animation" />

            <com.hisilicon.higallery.ui.HorizontalArrayPicker
                android:id="@+id/sliding_anim_picker"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1" />
        </LinearLayout>
    </LinearLayout>

    <Button
        android:id="@+id/btn_animation_setting"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/menu_animation" />
    <LinearLayout
        android:id="@+id/pic_animation_control"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="20dp"
        android:visibility="gone" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal" >

           <TextView
                android:layout_width="65dp"
                android:layout_height="wrap_content"
                android:text="@string/animation" />

            <com.hisilicon.higallery.ui.HorizontalArrayPicker
                android:id="@+id/pic_anim_picker"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>